--- a/index.html
+++ b/index.html
@@ -40,12 +40,8 @@
                     <a href="https://www.linkedin.com/tuperfil" target="_blank">
                         <img src="imagenes/linkedin (1).png" alt="LinkedIn" width="40">
                     </a>
-                    <a href="https://www.instagram.com/tuperfil" target="_blank">
-                        <img src="imagenes/instagram (1).png" alt="Instagram" width="45">
-                    </a>
-                    <a href="https://www.tiktok.com/tuperfil" target="_blank">
-                        <img src="imagenes/tik-tok.png" alt="TikTok" width="45">
-                    </a>
+
+
                 </div>
             </div>
         </section>
@@ -64,10 +60,10 @@
                     <img src="imagenes/Designer - 2024-07-09T194819.278.jpeg" alt="Software 1">
                     <p></p>
                     <div class="section-content-2">
-                        <a href="mailto:matias19011999@gmail.com" target="_blank">
+                        <a href="https://www.facebook.com/share/PBLAvauDFCnhfVsk/?mibextid=qi2Omg" target="_blank">
                             <img src="imagenes/face.png" alt="Facebook" width="40">
                         </a>
-                        <a href="https://www.instagram.com/tuperfil" target="_blank">
+                        <a href="https://www.instagram.com/websoftwarechile?igsh=MWllanVqdGZ4bGFqeg==" target="_blank">
                             <img src="imagenes/instagram (1).png" alt="Instagram" width="45">
                         </a>
                         <a href="https://www.instagram.com/tuperfil" target="_blank">
@@ -90,7 +86,7 @@
                         <a href="mailto:matias19011999@gmail.com" target="_blank">
                             <img src="imagenes/face.png" alt="Facebook" width="40">
                         </a>
-                        <a href="https://www.instagram.com/tuperfil" target="_blank">
+                        <a href="https://www.instagram.com/matiasdonaire_bim?igsh=MWNiN3l1enZwczlkOQ==" target="_blank">
                             <img src="imagenes/instagram (1).png" alt="Instagram" width="45">
                         </a>
                         <a href="https://www.instagram.com/tuperfil" target="_blank">
@@ -110,10 +106,10 @@
                     <img src="imagenes/image copy 3.png" alt="Limpia tu Entorno">
                     <div class="section-content-2">
                         
-                        <a href="mailto:matias19011999@gmail.com" target="_blank">
+                        <a href="https://www.facebook.com/profile.php?id=61559647243902&mibextid=ZbWKwL" target="_blank">
                             <img src="imagenes/face.png" alt="Facebook" width="40">
                         </a>
-                        <a href="https://www.instagram.com/tuperfil" target="_blank">
+                        <a href="https://www.instagram.com/limpiatuentorno?igsh=YXc4dW11eXhva3cz" target="_blank">
                             <img src="imagenes/instagram (1).png" alt="Instagram" width="45">
                         </a>
                         <a href="https://www.instagram.com/tuperfil" target="_blank">
